<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?android:attr/windowBackground"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_button"
                android:src="@drawable/back_icon"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/content_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="@color/onBackground"
                android:contentDescription="Return to previous page"
                style="@style/imageButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Centered scrollview, allowing scroll when screen is too short -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/header_margin"
            android:layout_marginEnd="@dimen/header_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingBottom="@dimen/centering_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_gravity="start"
                    android:text="Verify your email"
                    android:layout_marginTop="@dimen/content_margin"
                    style="@style/blackBoldHeader"
                    />

                <TextView
                    android:layout_gravity="start"
                    android:text="Please enter the 6-digit verification code we have sent to:"
                    android:layout_marginTop="@dimen/content_margin"
                    android:layout_marginBottom="@dimen/content_margin"
                    style="@style/grayContent"
                    />

                <TextView
                    android:id="@+id/recipient_email_address"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="Empty email address"
                    android:layout_marginBottom="@dimen/content_margin"
                    android:paddingStart="@dimen/content_margin"
                    android:paddingEnd="@dimen/content_margin"
                    style="@style/blackBoldContent"
                    />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="@dimen/content_margin_half"
                        android:layout_marginBottom="@dimen/content_margin_half">

                        <EditText
                            android:id="@+id/code1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/header_font_size"
                            android:background="@drawable/background_light_gray_selector"
                            android:textSize="@dimen/header_font_size"
                            android:textColor="@color/black"
                            android:inputType="number"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:padding="@dimen/content_margin"
                            android:hint="0"
                            android:maxLength="1"
                            android:layout_marginStart="@dimen/content_margin_half"
                            android:layout_marginEnd="@dimen/content_margin_half"
                            android:textColorHint="@color/gray" />

                        <EditText
                            android:id="@+id/code2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/header_font_size"
                            android:background="@drawable/background_light_gray_selector"
                            android:textSize="@dimen/header_font_size"
                            android:textColor="@color/black"
                            android:inputType="number"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:padding="@dimen/content_margin"
                            android:hint="0"
                            android:maxLength="1"
                            android:layout_marginStart="@dimen/content_margin_half"
                            android:layout_marginEnd="@dimen/content_margin_half"
                            android:textColorHint="@color/gray" />

                        <EditText
                            android:id="@+id/code3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/header_font_size"
                            android:background="@drawable/background_light_gray_selector"
                            android:textSize="@dimen/header_font_size"
                            android:textColor="@color/black"
                            android:inputType="number"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:padding="@dimen/content_margin"
                            android:hint="0"
                            android:maxLength="1"
                            android:layout_marginStart="@dimen/content_margin_half"
                            android:layout_marginEnd="@dimen/content_margin_half"
                            android:textColorHint="@color/gray" />

                        <EditText
                            android:id="@+id/code4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/header_font_size"
                            android:background="@drawable/background_light_gray_selector"
                            android:textSize="@dimen/header_font_size"
                            android:textColor="@color/black"
                            android:inputType="number"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:padding="@dimen/content_margin"
                            android:hint="0"
                            android:maxLength="1"
                            android:layout_marginStart="@dimen/content_margin_half"
                            android:layout_marginEnd="@dimen/content_margin_half"
                            android:textColorHint="@color/gray" />

                        <EditText
                            android:id="@+id/code5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/header_font_size"
                            android:background="@drawable/background_light_gray_selector"
                            android:textSize="@dimen/header_font_size"
                            android:textColor="@color/black"
                            android:inputType="number"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:padding="@dimen/content_margin"
                            android:hint="0"
                            android:maxLength="1"
                            android:layout_marginStart="@dimen/content_margin_half"
                            android:layout_marginEnd="@dimen/content_margin_half"
                            android:textColorHint="@color/gray" />

                        <EditText
                            android:id="@+id/code6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/header_font_size"
                            android:background="@drawable/background_light_gray_selector"
                            android:textSize="@dimen/header_font_size"
                            android:textColor="@color/black"
                            android:inputType="number"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:padding="@dimen/content_margin"
                            android:hint="0"
                            android:maxLength="1"
                            android:layout_marginStart="@dimen/content_margin_half"
                            android:layout_marginEnd="@dimen/content_margin_half"
                            android:textColorHint="@color/gray" />

                    </LinearLayout>
                </HorizontalScrollView>


                <LinearLayout
                    android:id="@+id/resend_linear_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layoutDirection="ltr"
                    android:layout_marginTop="@dimen/title_margin"
                    android:layout_marginBottom="@dimen/title_margin">

                    <TextView
                        android:text="Didn't receive?"
                        style="@style/grayContent"
                        />

                    <TextView
                        android:id="@+id/resend"
                        android:text="Resend email"
                        android:layout_marginStart="@dimen/content_margin_half"
                        style="@style/primaryVariantBoldContent"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/verification_error"
                    android:visibility="gone"
                    android:layout_gravity="start"
                    android:gravity="center_vertical"
                    android:text="Verification error"
                    android:layout_marginTop="@dimen/content_margin_half"
                    android:layout_marginBottom="@dimen/content_margin_half"
                    style="@style/errorField"
                    />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/verify_email_button"
                    android:layout_marginTop="@dimen/content_margin"
                    android:enabled="true"
                    android:text="Verify Email"
                    style="@style/colorButton" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

